--- a/dotNet5781_03b_8658_4874/Window2.xaml
+++ b/dotNet5781_03b_8658_4874/Window2.xaml
@@ -5,11 +5,11 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:dotNet5781_03b_8658_4874"
         mc:Ignorable="d"
-        Title="Window2" Height="120" Width="380">
+        Title="Window2" Height="100" Width="380" Background="#FFCABBC1">
     <Grid Margin="0,0,12.333,8.667">
         <TextBlock  Text="Enter the travel distance: " Style="{StaticResource myTextBlockStyle}"  HorizontalAlignment="Left" Margin="10,10,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="39" Width="217"/>
         <TextBox x:Name="ditance" PreviewKeyDown="TextBox_OnlyNumbers_PreviewKeyDown"  Text="{Binding Path=numOfBus1,UpdateSourceTrigger=LostFocus,Mode=TwoWay}" HorizontalAlignment="Left" Height="23" Margin="207,10,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
-        <Button x:Name="sentButton" Style="{StaticResource myButtonStyle}" Content="Sent" HorizontalAlignment="Left" Margin="97,54,0,0" VerticalAlignment="Top" Width="75" Click="sentButton_Click" Background="#FFC799CE"/>
+        
 
     </Grid>
 </Window>
