--- a/UIwpf/manager.xaml
+++ b/UIwpf/manager.xaml
@@ -66,7 +66,7 @@
                     <TabItem.Content>
                         <Grid>
                             <ListBox x:Name="lbBusesOnSystem" ItemTemplate="{StaticResource MyDataTemplateBuses}"  HorizontalAlignment="Left" Height="294" Margin="118,60,0,0" VerticalAlignment="Top" Width="419"  SelectionMode="Single" ItemsSource="{Binding}" />
-                            <Button Content="הוספת אוטובוס" HorizontalAlignment="Left" Margin="109,10,0,0" VerticalAlignment="Top" Width="90"/>
+                            <Button Content="הוספת אוטובוס" HorizontalAlignment="Left" Margin="109,10,0,0" VerticalAlignment="Top" Width="90" Click="Button_ClickAddBus"/>
                             <Button Content="עדכון אוטובוס" HorizontalAlignment="Left" Margin="300,10,0,0" VerticalAlignment="Top" Width="90"/>
                             <Button Content="מחיקת אוטובוס" HorizontalAlignment="Left" Margin="500,10,0,0" VerticalAlignment="Top" Width="90"/>
                         </Grid>
@@ -88,9 +88,9 @@
                 <TabItem Header="תחנות" Height="24" VerticalAlignment="Bottom" HorizontalAlignment="Right" Margin="0,0,-2,-2" Width="66">
                     <TabItem.Content>
                         <Grid>
-                            <ListBox x:Name="lbStationsOnSystem" ItemTemplate="{StaticResource MyDataTemplateStations}"  HorizontalAlignment="Left" Height="294" Margin="70,60,0,0" VerticalAlignment="Top" Width="520"  SelectionMode="Single" ItemsSource="{Binding}" />
+                            <ListBox x:Name="lbStationsOnSystem" ItemTemplate="{StaticResource MyDataTemplateStations}"  HorizontalAlignment="Left" Height="294" Margin="70,60,0,0" VerticalAlignment="Top" Width="520"  SelectionMode="Single" MouseDoubleClick="showDataStations_doubleClick" ItemsSource="{Binding}" />
                             <Button Content="הוספת תחנה" HorizontalAlignment="Left" Margin="109,10,0,0" VerticalAlignment="Top" Width="90" Click="Button_ClickAddStation"/>
-                            <Button Content="עדכון תחנה" HorizontalAlignment="Left" Margin="300,10,0,0" VerticalAlignment="Top" Width="90"/>
+                            <Button Content="עדכון תחנה" HorizontalAlignment="Left" Margin="300,10,0,0" VerticalAlignment="Top" Width="90" Click="Button_ClickUpdateStation"/>
                             <Button Content="מחיקת תחנה" HorizontalAlignment="Left" Margin="500,10,0,0" VerticalAlignment="Top" Width="90" Click="Button_ClickDeleteStation"/>
                         </Grid>
                     </TabItem.Content>
