--- a/UIwpf/manager.xaml
+++ b/UIwpf/manager.xaml
@@ -7,7 +7,7 @@
         mc:Ignorable="d"
         Title="מנהל" Height="450" Width="800">
     <Window.Resources>
-        <DataTemplate x:Key="MyDataTemplateBuses"                   DataType="local:MyData" >
+        <DataTemplate x:Key="MyDataTemplateBuses"    DataType="local:MyData" >
             <Grid Grid.IsSharedSizeScope="True">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="100" SharedSizeGroup="FirstNameColumn"/>
@@ -18,8 +18,8 @@
                 </Grid.ColumnDefinitions>
                 <TextBlock Grid.Column="4" Text=":מספר רישוי" FontFamily="Ink Free" FontSize="12" Foreground="#FF0A0A0E" FontWeight="Bold"/>
                 <TextBlock Grid.Column="3"  Text="{Binding Path=License}" FontSize="11" Foreground="#FF0D0D12" />
-                <Button x:Name="Treatment" Content="בצע טיפול" Grid.Column="1" Background="#FF8EBCD0" />
-                <Button x:Name="Fuel" Content="בצע תדלוק" Grid.Column="0" Background="#FF8EBCD0"/>
+                <Button x:Name="Treatment" Content="בצע טיפול" Grid.Column="1" Background="#FF8EBCD0" Click="Button_ClickTreatment" />
+                <Button x:Name="Fuel" Content="בצע תדלוק" Grid.Column="0" Background="#FF8EBCD0" Click="Button_ClickFuel" />
             </Grid>
         </DataTemplate>
         <DataTemplate x:Key="MyDataTemplateLines"                   DataType="local:MyData" >
@@ -65,10 +65,10 @@
                 <TabItem Header="אוטובוסים">
                     <TabItem.Content>
                         <Grid>
-                            <ListBox x:Name="lbBusesOnSystem" ItemTemplate="{StaticResource MyDataTemplateBuses}"  HorizontalAlignment="Left" Height="294" Margin="118,60,0,0" VerticalAlignment="Top" Width="419"  SelectionMode="Single" ItemsSource="{Binding}" />
+                            <ListBox x:Name="lbBusesOnSystem" ItemTemplate="{StaticResource MyDataTemplateBuses}"  HorizontalAlignment="Left" Height="294" Margin="118,60,0,0" VerticalAlignment="Top" Width="419"  SelectionMode="Single" ItemsSource="{Binding}" MouseDoubleClick="showDataBuses_doubleClick" />
                             <Button Content="הוספת אוטובוס" HorizontalAlignment="Left" Margin="109,10,0,0" VerticalAlignment="Top" Width="90" Click="Button_ClickAddBus"/>
-                            <Button Content="עדכון אוטובוס" HorizontalAlignment="Left" Margin="300,10,0,0" VerticalAlignment="Top" Width="90"/>
-                            <Button Content="מחיקת אוטובוס" HorizontalAlignment="Left" Margin="500,10,0,0" VerticalAlignment="Top" Width="90"/>
+                            <Button Content="עדכון אוטובוס" HorizontalAlignment="Left" Margin="300,10,0,0" VerticalAlignment="Top" Width="90" Click="Button_ClickUpdateBus"/>
+                            <Button Content="מחיקת אוטובוס" HorizontalAlignment="Left" Margin="500,10,0,0" VerticalAlignment="Top" Width="90" Click="Button_ClickDeleteBus"/>
                         </Grid>
                     </TabItem.Content>
                 </TabItem>
