--- a/UIwpf/updateStation.xaml
+++ b/UIwpf/updateStation.xaml
@@ -13,7 +13,7 @@
         <TextBlock HorizontalAlignment="Left" Margin="463,150,0,0" TextWrapping="Wrap" Text=":קו רוחב מעודכן" VerticalAlignment="Top" Height="29" Width="102"/>
         <TextBlock HorizontalAlignment="Left" Margin="465,200,0,0" TextWrapping="Wrap" Text=":קו אורך מעודכן" VerticalAlignment="Top" Height="29" Width="129"/>
         <TextBlock HorizontalAlignment="Left" Margin="442,250,0,0" TextWrapping="Wrap" Text=":שם תחנה מעודכן" VerticalAlignment="Top" Height="29" Width="129"/>
-        <TextBox x:Name="addLine1" HorizontalAlignment="Left" Height="23" Margin="275,100,0,0" TextWrapping="Wrap" Text="{Binding Path=CodeStation, Mode=OneWayToSource}" VerticalAlignment="Top" Width="120"/>
+        <TextBox x:Name="addLine1" HorizontalAlignment="Left" Height="23" Margin="275,100,0,0" TextWrapping="Wrap" PreviewKeyDown="TextBox_OnlyNumbers_PreviewKeyDown" Text="{Binding Path=CodeStation, Mode=OneWayToSource}" VerticalAlignment="Top" Width="120"/>
         <TextBox x:Name="addLine2" HorizontalAlignment="Left" Height="23" Margin="275,150,0,0" TextWrapping="Wrap" Text="{Binding Path=Latitude, Mode=OneWayToSource}" VerticalAlignment="Top" Width="120"/>
         <TextBox x:Name="addLine3" HorizontalAlignment="Left" Height="23" Margin="275,200,0,0" TextWrapping="Wrap" Text="{Binding Path=Longitude, Mode=OneWayToSource}" VerticalAlignment="Top" Width="120"/>
         <TextBox x:Name="addLine4" HorizontalAlignment="Left" Height="23" Margin="272,250,0,0" TextWrapping="Wrap" Text="{Binding Path=NameStation, Mode=OneWayToSource}" VerticalAlignment="Top" Width="120"/>
